plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.14'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.human'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

compileJava {
    options.compilerArgs << '-parameters'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 마리아디비	
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	// 마이바티스
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'

	// jasypt : 디비 암호화를 위한 라이브러리
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

	// 롬복
	compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

	// 시큐리티
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	//Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	// 💡 validation 라이브러리 추가
    implementation 'org.springframework.boot:spring-boot-starter-validation'

	// API XML 데이터 가져오기
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

}

tasks.named('test') {
	useJUnitPlatform()
}
